# deckdex

./: .gitignore  CLAUDE.md  README-REKORDBOX.md  config.yaml  create-reference-xml.sh  deckdex.db  export-rekordbox.sh  fix-rekordbox-xml.sh  normalize-dj-library.py  pyproject.toml  test-rekordbox-integration.sh
docs/: REKORDBOX7-EXPORT.md
src/: PLAYLIST_REKORDBOX_FIX_PLAN.md  PROJECTPLAN.md
src/cli/: import_library.py
src/deckdex/: PLAYLIST_SYNC_PLAN.md  README-PLEX.md  file_processor.py  library_monitor.py  models.py  rekordbox.py  reorganizer.py  schema_explorer.py
src/deckdex.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/deckdex/cli/: __init__.py  commands.py  import_library.py
src/deckdex/identifier/: models.py  service.py  utils.py
src/deckdex/metadata/: __init__.py  cache.py  models.py  service.py
src/deckdex/metadata/providers/: __init__.py  acoustid.py  base.py
src/deckdex/playlist/: README.md  __init__.py  models.py  plex.py  rekordbox.py  service.py  sync.py
src/deckdex/tests/: test_flac_to_aiff.py  test_import_library.py  test_plex_db_permission.py  test_plex_metadata.py  test_rekordbox_export.py
src/deckdex/tests/identifier/: test_service.py
src/deckdex/tests/metadata/providers/: test_acoustid.py
src/deckdex/tests/playlist/: __init__.py  conftest.py  test_models.py  test_plex.py  test_rekordbox.py  test_rekordbox_integration.py  test_service.py  test_sync.py
src/deckdex/utils/: diagnostic_report.txt  files_to_check.txt  plex.py  plex_api_test.py  plex_file_diagnostics.py  track_diagnostics.py
tests/: test_flac_to_aiff.py
tests/identifier/: test_service.py
